--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,11 @@
+server:
+  port: 8084
 spring:
   application:
-    name: observability-producer-service
+    name: observability-bridge-service
+
+app:
+  outbound:
+    rest-clients:
+      consumer:
+        base-url: "http://consumer:8082"
